fixed section spacing

--- a/app/static/css/stylesheet.css
+++ b/app/static/css/stylesheet.css
@@ -15,12 +15,12 @@ a {
   a:hover {
     text-decoration: underline; }
 
-section {
+/*section {
     display: block;
     width: 100vw;
     height: 100vh;
     box-sizing: border-box;
-}
+}*/
 
 .btn {
   display: inline-block;
